--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+#Developer Preferences
+examples/
+.vscode/
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-.env
 # testing
 /coverage
 
@@ -24,6 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env*
 .env.local
 .env.development.local
 .env.test.local
