--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "deploy": "next build && next export && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
     "next": "9.3.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
