--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "next": "9.3.4",
+    "next-redux-wrapper": "^5.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
@@ -34,6 +37,7 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "jest": "^25.3.0",
     "prettier": "^2.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "ts-jest": "^25.3.1",
     "typescript": "^3.8.3"
   }
