--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig",
   "compilerOptions": {
     "module": "commonjs",
+    "isolatedModules": false,
     "jsx": "react"
   }
 }
