--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
+    "chance": "^1.1.4",
     "next": "9.3.4",
     "next-redux-wrapper": "^5.0.0",
     "react": "16.13.1",
@@ -26,12 +27,14 @@
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.18",
     "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-storyshots": "^5.3.18",
     "@storybook/addon-storysource": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^5.3.18",
+    "@storybook/react": "^6.0.0-alpha.33",
     "@storybook/source-loader": "^5.3.18",
+    "@types/chance": "^1.0.10",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
@@ -51,6 +54,7 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "jest": "^25.3.0",
     "prettier": "^2.0.4",
+    "react-test-renderer": "^16.13.1",
     "redux-devtools-extension": "^2.13.8",
     "ts-jest": "^25.3.1",
     "typescript": "^3.8.3"
