--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "jest": "^25.3.0",
+    "node-fetch": "^2.6.0",
     "prettier": "^2.0.4",
     "react-test-renderer": "^16.13.1",
     "redux-devtools-extension": "^2.13.8",
