--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
-    "chance": "^1.1.4",
+    "classnames": "^2.2.6",
     "next": "9.3.4",
     "next-redux-wrapper": "^5.0.0",
+    "node-fetch": "^2.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "storybook-addon-material-ui": "^0.9.0-alpha.21"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -53,7 +56,6 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "jest": "^25.3.0",
-    "node-fetch": "^2.6.0",
     "prettier": "^2.0.4",
     "react-test-renderer": "^16.13.1",
     "redux-devtools-extension": "^2.13.8",
