--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
+    "luxon": "^1.23.0",
+    "material-ui-image": "^3.2.3",
     "next": "9.3.4",
     "next-redux-wrapper": "^5.0.0",
     "node-fetch": "^2.6.0",
