--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,26 +2,45 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run Jest
+        uses: stefanoeb/jest-action@1.0.2
+
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    # Runs a set of commands using the runners shell
-    - name: Build Site
-      run: |
-        yarn 
-        yarn next build && yarn next export -o dist
+      # Runs a set of commands using the runners shell
+      - name: Build Site
+        run: |
+          yarn 
+          yarn build-storybook
 
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v3
-      with:
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: dist
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: .storybookout
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: amondnet/now-deployment@v2
+  #       with:
+  #         zeit-token: ${{ secrets.ZEIT_TOKEN }} # Required
+  #         github-token: ${{ secrets.TOKEN }} #Optional
+  #         now-args: '--prod' #Optional
+  #         now-project-id: ${{ secrets.PROJECT_ID}} #Required
+  #         now-org-id: ${{ secrets.ORG_ID}} #Required
+  #         working-directory: ./sub-directory
