--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,24 +26,15 @@ jobs:
           yarn 
           yarn build-storybook
 
-      - name: Deploy
+      - name: Deploy Docs
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           BRANCH: gh-pages
           FOLDER: .storybookout
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-node@v1
+      - name: Deploy  App
+        uses: artemis-tech/zeit-now-cli@v1
+        env:
+          ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
         with:
-          node-version: '10.x'
-      - uses: actions/checkout@v2
-      - uses: amondnet/now-deployment@v2
-        with:
-          zeit-token: ${{ secrets.ZEIT_TOKEN }} # Required
-          github-token: ${{ secrets.TOKEN }} #Optional
-          now-args: '--prod' #Optional
-          now-project-id: ${{ secrets.PROJECT_ID}} #Required
-          now-org-id: ${{ secrets.ORG_ID}} #Required
-          working-directory: ./sub-directory
+          args: --prod # this will deploy to production
