--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,35 +6,37 @@ on:
   pull_request:
     branches: [master]
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Run Jest
-        uses: stefanoeb/jest-action@1.0.2
+  jobs:
+    cypress-run:
+      runs-on: ubuntu-16.04
+      steps:
+        - uses: actions/checkout@v1
+        - uses: cypress-io/github-action@v1
+          with:
+            browser: chrome
+            headless: true
+    test:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v1
+        - name: Run Jest
+          uses: stefanoeb/jest-action@1.0.2
 
-  build:
-    runs-on: ubuntu-latest
+    build:
+      runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+      steps:
+        - uses: actions/checkout@v2
 
-      # Runs a set of commands using the runners shell
-      - name: Build Site
-        run: |
-          yarn 
-          yarn build-storybook
+        # Runs a set of commands using the runners shell
+        - name: Build Site
+          run: |
+            yarn 
+            yarn build-storybook
 
-      - name: Deploy Docs
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: .storybookout
-      - name: Deploy  App
-        uses: artemis-tech/zeit-now-cli@v1
-        env:
-          ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
-        with:
-          args: --prod # this will deploy to production
+        - name: Deploy Docs
+          uses: JamesIves/github-pages-deploy-action@releases/v3
+          with:
+            GITHUB_TOKEN: ${{ secrets.TOKEN }}
+            BRANCH: gh-pages
+            FOLDER: .storybookout
