--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run Jest
         uses: stefanoeb/jest-action@1.0.2
+        with:
+          jestArgs: --ci -u
 
   # cypress-run:
   #   runs-on: ubuntu-16.04
