--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "start": "next start",
     "deploy": "next build && next export && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages",
     "test": "jest",
-    "storybook": "start-storybook  -p 6006",
-    "build-storybook": "build-storybook   -c .storybook -o .storybookout"
+    "storybook": "start-storybook -s .github -p 6006",
+    "build-storybook": "build-storybook -s .github   -c .storybook -o .storybookout"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
+    "@storybook/addon-actions": "^5.3.18",
     "classnames": "^2.2.6",
     "luxon": "^1.23.0",
     "next": "9.3.4",
@@ -27,10 +28,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^10.0.2",
-    "@types/testing-library__react": "^10.0.1",
     "@babel/core": "^7.9.0",
-    "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.18",
     "@storybook/addon-links": "^5.3.18",
     "@storybook/addon-storyshots": "^5.3.18",
@@ -40,10 +38,13 @@
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^6.0.0-alpha.33",
     "@storybook/source-loader": "^5.3.18",
+    "@testing-library/react": "^10.0.2",
     "@types/chance": "^1.0.10",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
+    "@types/react-slick": "^0.23.4",
+    "@types/testing-library__react": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "babel-jest": "^25.3.0",
